Document ImageJ legacy patcher test-ordering constraint in AGENTS.md